Closed Bug 785927 Opened 13 years ago Closed 13 years ago

js/src/vm/ObjectImpl-inl.h:214:1: warning: unused function 'IsValueInCompartment' [-Wunused-function]

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: gps, Assigned: terrence)

References

Details

Attachments

(1 file)

I pulled m-c for the first time in about a week this morning and got a new compiler warning: js/src/vm/ObjectImpl-inl.h:214:1: warning: unused function 'IsValueInCompartment' [-Wunused-function] I'm seeing it repeated a few dozen times (because the header is included many places, I assume). I'm building with Clang SVN HEAD minus a week or two on OS X.
Looks like I forgot #ifdef DEBUG markers around it. Thanks for filing.
Assignee: general → terrence
Blocks: 776583
Status: NEW → ASSIGNED
Attached patch v0: trivialSplinter Review
Attachment #655628 - Flags: review?(gps)
Comment on attachment 655628 [details] [diff] [review] v0: trivial Review of attachment 655628 [details] [diff] [review]: ----------------------------------------------------------------- I'm not a peer for the JS module, so I don't think I can give r+. It looks good to me though.
Attachment #655628 - Flags: review?(gps) → feedback+
I consider it a build issue, not a JS issue as such, but whatever.
Comment on attachment 655628 [details] [diff] [review] v0: trivial r+ from bhackett on IRC with feedback from Waldo that I should make it inline instead of static, since inline implies static in C++.
Attachment #655628 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: