Bug 785927 - Fix warning for unused IsValueInCompartment; r=bhackett

--HG--
extra : rebase_source : 1f72c64450274fe860de6c22db7292dec83070b6