js/src/vm/ObjectImpl-inl.h
@@ -210,7 +210,8 @@ ValueCompartment(const js::Value &value)
     return static_cast<js::gc::Cell *>(value.toGCThing())->compartment();
 }
 
-static bool
+#ifdef DEBUG
+inline bool
 IsValueInCompartment(js::Value v, JSCompartment *comp)
 {
     if (!v.isMarkable())
@@ -218,6 +219,7 @@ IsValueInCompartment(js::Value v, JSCompartment *comp)
     JSCompartment *vcomp = ValueCompartment(v);
     return vcomp == comp->rt->atomsCompartment || vcomp == comp;
 }
+#endif
 
 inline void
 js::ObjectImpl::setSlot(uint32_t slot, const js::Value &value)
